--- a/adventure/index.html
+++ b/adventure/index.html
@@ -5,7 +5,7 @@
 
 </head>
 <body>
-    <h1>My Adventure Journal - A visit to California </h1>
+    <h1>My Adventure Journal - A visit to California tfuytu7y</h1>
         <h2>Oct 5, 1848</h2>
        <p>Today I went to california to look for gold at the California Gold Rush and brought my shovel and hat.
         I learned a new word that described everything that was going on. They say is pronounced "Dank" which means really good.
