--- a/adventure/index.html
+++ b/adventure/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        body {background-color:rgb(204, 202, 202);}
+    </style>
 <title>My Adventure Journal - A visit to California</title>
 
 </head>
 <body>
-    <h1>My Adventure Journal - A visit to California tfuytu7y</h1>
-        <h2>Oct 5, 1848</h2>
+    <h1 style="color:Blue;font-family:'Franklin Gothic Medium';text-align:center">My Adventure Journal - A visit to California </h1>
+        <h2 style="color:rgb(219, 55, 83); font-family: Cambria;">Oct 5, 1848</h2>
        <p>Today I went to california to look for gold at the California Gold Rush and brought my shovel and hat.
         I learned a new word that described everything that was going on. They say is pronounced "Dank" which means really good.
        </p>
        <p>IMAGE</p> 
 
-        <h2>March 12, 1950</h2>
+        <h2 style="color:red; font-family: Cambria;">March 12, 1950</h2>
         <p>Around this time California is growing in popularity. The mood is always up, prosperity rules everywhere, and the standard of living is high . I would say that it is the land of plenty for a new generation of movers and shakers who reinvented the way America would live.
         Today I coined the term "Post up" which I am told means to stand around without doing much.</p>
         <p>IMAGE</p>
 
 
-        <h2>Oct 1, 1990</h2>
+        <h2 style="color:purple; font-family: Cambria;">Oct 1, 1990</h2>
         <p>Today our new park was created, Yosemite. It is located in the Sierra Nevada mountains. It's famed for its giant, ancient sequoia trees, and for Tunnel View,
         I also learned a new term when I saw people sitting on the mountains doing nothing. Bum, it means to have or borrow.</p>
-    
+    <p>IMAGE</p>
+
     <p>Base supply list
         1. Multiple changes of clothing
         2. Sunscreen
