--- a/adventure/index.html
+++ b/adventure/index.html
@@ -12,29 +12,29 @@
     <h1 style="color:Blue;font-family:'Franklin Gothic Medium';text-align:center">My Adventure Journal - A visit to California </h1>
         <h2 style="color:rgb(219, 55, 83); font-family: Cambria;">Oct 5, 1848</h2>
        <li style="font-family:fantasy;">Today I went to california to look for gold at the California Gold Rush and brought my shovel and hat.
-        I learned a new word that described everything that was going on. They say is pronounced "Dank" which means really good.
+        <em>I learned a new word that described everything that was going on. They say is pronounced "Dank" which means really good.</em>
        </li>
        <p>IMAGE</p> 
 
         <h2 style="color:red; font-family: Cambria;">March 12, 1950</h2>
         <li style="font-family:fantasy;">this time California is growing in popularity. The mood is always up, prosperity rules everywhere, and the standard of living is high . I would say that it is the land of plenty for a new generation of movers and shakers who reinvented the way America would live.
-        Today I coined the term "Post up" which I am told means to stand around without doing much.</li>
+        <em>Today I coined the term "Post up" which I am told means to stand around without doing much.</em></li>
         <p>IMAGE</p>
 
 
         <h2 style="color:purple; font-family: Cambria;">Oct 1, 1990</h2>
         <li style="font-family:fantasy;">Today our new park was created, Yosemite. It is located in the Sierra Nevada mountains. It's famed for its giant, ancient sequoia trees, and for Tunnel View,
-        I also learned a new term when I saw people sitting on the mountains doing nothing. Bum, it means to have or borrow.</li>
+        I also learned a new term when I saw people sitting on the mountains doing nothing. <em>Bum, it means to have or borrow.</em></li>
     <p>IMAGE</p>
 
     <pre style="font-family:fantasy;">Base supply list
-        1. Multiple changes of clothing 
+        <strong>Multiple changes of clothing 
         2. Sunscreen
         3. Sunglasses/hat
         4. Swim shorts
-        5. Chargers</pre>
+        5. Chargers</strong> </pre>
 
-   <li style="font-family:fantasy;">California - California has some of the most beautiful landscapes in the U.S. Home to nine national parks, which is more than any other state, there's no shortage of opportunity to experience the best of our country's natural beauty in California.</li>
+   <li><stong>style="font-family:fantasy;">California - California has some of the most beautiful landscapes in the U.S. Home to nine national parks, which is more than any other state, there's no shortage of opportunity to experience the best of our country's natural beauty in California.</stong></li> 
 
 </body>
 </html>
