--- a/adventure/index.html
+++ b/adventure/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <!--Author: Cayden Mackey-->
 <head>
     <style>
         body {background-color:rgb(204, 202, 202);}
@@ -8,6 +9,7 @@
 
 </head>
 <body>
+    <!--Journal Entry 1-->
     <h3>Oct 5, 1848, March 12, 1950, Oct 1, 1990</h3>
     <h1 style="color:Blue;font-family:'Franklin Gothic Medium';text-align:center">My Adventure Journal - A visit to California </h1>
         <h2 style="color:rgb(219, 55, 83); font-family: Cambria;">Oct 5, 1848</h2>
@@ -15,18 +17,19 @@
         <em>I learned a new word that described everything that was going on. They say is pronounced "Dank" which means really good.</em>
        </li>
        <p>IMAGE</p> 
-
+<!--Journal Entry 2-->
         <h2 style="color:red; font-family: Cambria;">March 12, 1950</h2>
         <li style="font-family:fantasy;">this time California is growing in popularity. The mood is always up, prosperity rules everywhere, and the standard of living is high . I would say that it is the land of plenty for a new generation of movers and shakers who reinvented the way America would live.
         <em>Today I coined the term "Post up" which I am told means to stand around without doing much.</em></li>
         <p>IMAGE</p>
 
-
+<!--Journal Entry 3-->
         <h2 style="color:purple; font-family: Cambria;">Oct 1, 1990</h2>
         <li style="font-family:fantasy;">Today our new park was created, Yosemite. It is located in the Sierra Nevada mountains. It's famed for its giant, ancient sequoia trees, and for Tunnel View,
         I also learned a new term when I saw people sitting on the mountains doing nothing. <em>Bum, it means to have or borrow.</em></li>
     <p>IMAGE</p>
 
+    <!--This is the supply list-->
     <pre style="font-family:fantasy;">Base supply list
         <strong>Multiple changes of clothing 
         2. Sunscreen
@@ -34,7 +37,20 @@
         4. Swim shorts
         5. Chargers</strong> </pre>
 
-   <li><stong>style="font-family:fantasy;">California - California has some of the most beautiful landscapes in the U.S. Home to nine national parks, which is more than any other state, there's no shortage of opportunity to experience the best of our country's natural beauty in California.</stong></li> 
+   <p style="font-family:fantasy;"><stong>California has some of the most beautiful landscapes in the U.S. Home to nine national parks, which is more than any other state, there's no shortage of opportunity to experience the best of our country's natural beauty in California.</stong></p> 
+<p style="font-family: 'Times New Roman', Times, serif;"> More interesting places to visit and cool info in California</p>
+<pre style= font-family:'Franklin Gothic Medium;"> 
 
+    <a href="https://www.busytourist.com/most-beautiful-places-to-visit-in-california/" target="_blank">Beautiful places to visit </a>
+    <a href="https://disneyland.disney.go.com/"target="_blank">Disneyland</a> 
+    <a href="https://www.miramarairshow.com/"target="_blank">The Miramar Air Show</a>
+    <a href="https://www.musicfestivalwizard.com/festival-guide/california/ "target="_blank">Music festivals</a>
+    <a href="https://www.point2homes.com/US/Luxury-Real-Estate/CA.html/"target="_blank">Mansions</a>
+    <a href="https://www.fourseasons.com/magazine/discover/best-snorkelling-in-the-world/"target="_blank">Snorkeling</a>
+    <a href="https://www.thomaskeller.com/tfl"target="_blank">French Laundry</a> 
+    <a href="https://sandiegozoowildlifealliance.org/"target="_blank">The Famous Zoo</a>
+    <a href=" https://www.nps.gov/yose/index.htm"target="_blank">Yosemite park</a>
+    <a href="https://weather.com/weather/monthly/l/Los+Angeles+CA?canonicalCityId=84c64154109916077c8d3c2352410aaae5f6eeff682000e3a7470e38976128c2"target="_blank">Daily weather</a>
+  </pre>
 </body>
 </html>
