--- a/Table/table.html
+++ b/Table/table.html
@@ -3,11 +3,11 @@
 <head>
     <style>
         thead {color: green;}
-tbody {color: blue;}
-tfoot {color: red;}
+        tbody {color: blue;}
+        tfoot {color: red;}
         table, th, td {
-  border: 1px solid black;
-}
+            border: 1px solid black;
+    }
     </style>
 <title>Create an HTML Table</title>
 
@@ -15,8 +15,7 @@ tfoot {color: red;}
 <body>
     <!--This is a Table-->
 <table> 
-<thead style="text-align: right;">
-    <tbody>
+
     <tr>
         <th>Monday</th>
         <th>Tuesday</th>
@@ -25,10 +24,7 @@ tfoot {color: red;}
         <th>Friday
         </th>
     </tr>
-    </thead>
-    </tbody>
-    <tbody>
-    <tbody 
+
     <tr>
         <td>Eat</td>
         <td>Chores</td>
@@ -36,8 +32,7 @@ tfoot {color: red;}
         <td>Go to work</td>
         <td>Sleep at 10</td>
     </tr>
-</tbody>
-<tbody>
+
     <tr>
         <td>Run</td>
         <td>Fly</td>
@@ -45,8 +40,7 @@ tfoot {color: red;}
         <td>Crawl</td>
         <td>walk</td>
     </tr>
-</tbody>
-<tbody>
+
     <tr>
         <td>Coffee</td>
         <td>Laundry</td>
@@ -54,8 +48,7 @@ tfoot {color: red;}
         <td>Watch TV</td>
         <td>Sleep</td>
     </tr>
-</tbody>
-    <tbody>
+
 <tr>
         <td>Go to Museum</td>
         <td>Go to Park</td>
@@ -63,8 +56,7 @@ tfoot {color: red;}
         <td>Hiking</td>
         <td>Sledding</td>
     </tr>
-</tbody>
-<tfoot>
+
     <tr>
         <td>Throw a Party</td>
         <td>Rob a bank</td>
@@ -72,7 +64,62 @@ tfoot {color: red;}
         <td>Hit a Tree</td>
         <td>Go to the ER</td>
     </tr>
-</tfoot>
+
 </table>
+
+
+<table>
+    <thead style="text-align: right;">
+      
+        <tr>
+            <th>$ Monday</th>
+            <th>$ Tuesday</th>
+            <th>$ Wednesday</th>
+            <th>$ Thursday</th>
+            <th>$ Friday
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+         <tr>
+            <td>44</td>
+            <td>45</td>
+            <td>86</td>
+            <td>38</td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <td>56</td>
+            <td>92</td>
+            <td>47</td>
+            <td>74</td>
+            <td>55</td>
+        </tr>
+        <tr>
+            <td>33</td>
+            <td>24</td>
+            <td>45</td>
+            <td>44</td>
+            <td>75</td>
+        </tr>
+        <tr>
+            <td>77</td>
+            <td>12</td>
+            <td>88</td>
+            <td>60</td>
+            <td>48</td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr>
+            <td>210</td>
+            <td>173</td>
+            <td>266</td>
+            <td>216</td>
+            <td>188</td>
+        </tr>
+    </tfoot>
+</table>
+
 </body>
 </html>
