--- a/Table/table.html
+++ b/Table/table.html
@@ -6,17 +6,25 @@
         tbody {color: blue;}
         tfoot {color: red;}
         table, th, td {
-            border: 1px solid black;
+            border: 4px solid black;
     }
+table, th, td {
+        padding-top: 100px;
+        padding-bottom: 20px;
+        padding-left: 30px;
+        padding-right: 40px;
+      }
     </style>
 <title>Create an HTML Table</title>
 
 </head>
 <body>
     <!--This is a Table-->
-<table> 
+<table>
 
-    <tr>
+    
+
+    <tr> 
         <th>Monday</th>
         <th>Tuesday</th>
         <th>Wednesday</th>
