--- a/css-background/css-text/css-text.html
+++ b/css-background/css-text/css-text.html
@@ -4,7 +4,13 @@
 <title> CSS Text </title>
 <style>
 #name {
-    
+    color:red;
+}
+#hex {
+    color: #ecdb43;
+}
+#rgb {
+    color: rgb(354,235,55)
 }
 </style>
 </head>
