--- a/css-background/css-background.html
+++ b/css-background/css-background.html
@@ -32,6 +32,12 @@
 
 </style>
 </head>
+<!--Step 8...Add six div sections (<div></div>) to the body of your page.-->
+<!--Steps 9-12...select images within peramiters and upload by right clicking "css-background" and selecting upload-->
+<!--Step 13...insert text into div sections from step 8 "15-20 lines long"-->
+<!--Step 14...asign id's to each div sections-->
+<!--Step 15/16...Add styles using the information provided in the document on google classroom to use the same ones in the style section-->
+<!-- step 
 <body>
     <div id="style1">If you’re bobbing for apples and you manage to catch one with your teeth and then eat a bite, you’ll be able to see the path to the land of Faery.
 
