--- a/css-font/css-font.html
+++ b/css-font/css-font.html
@@ -3,19 +3,36 @@
 <head>
 <title>CSS Font</title>
 <style>
-#b {
-    font-size: 2.5em; /* 40px/16=2.5em */; font-family: "Times New Roman", Times, serif;
+#passageone {
+    font-size: 2.5em;
+     font-family: "Times New Roman", Times, serif;
 }
-#refrence {
-    font-family: "Lucida Console", "Courier New", monospace; font-size: 0.875em; /* 10px/16=0.875em */; font-weight: bold;
+#refrenceone {
+    font-family: "Lucida Console", "Courier New", monospace;
+     font-size: 0.875em;
+      font-weight: bold;
+}
+#passagetwo {
+    font: 2.5em "Times New Roman", Times, serif;
+
+}
+#refrencetwo {
+   font: bold 0.875em "Lucida Console", "Courier New", monospace;
 }
 </style>
 </head>
-<body id="b">
-    <p> For this reason I remind you to fan into flame the gift of God, which is in you through the laying on of my hands. For the Spirit God gave us does not make us timid, but gives us power, love and self-discipline. So do not be ashamed of the testimony about our Lord or of me his prisoner. Rather, join with me in suffering for the gospel, by the power of God. He has saved us and called us to a holy life—not because of anything we have done but because of his own purpose and grace. This grace was given us in Christ Jesus before the beginning of time, but it has now been revealed through the appearing of our Savior, Christ Jesus, who has destroyed death and has brought life and immortality to light through the gospel. And of this gospel I was appointed a herald and an apostle and a teacher. That is why I am suffering as I am. Yet this is no cause for shame, because I know whom I have believed, and am convinced that he is able to guard what I have entrusted to him until that day.</p>
-<br>
-<p id="refrence">2 Timothy 1:6-12</p>
 
-<p> <span style="font-family:Georgia, 'Times New Roman', Times, serif" > For this reason I remind you to fan into flame the gift of God, which is in you through the laying on of my hands. For the Spirit God gave us does not make us timid, but gives us power, love and self-discipline. So do not be ashamed of the testimony about our Lord or of me his prisoner. Rather, join with me in suffering for the gospel, by the power of God. He has saved us and called us to a holy life—not because of anything we have done but because of his own purpose and grace. This grace was given us in Christ Jesus before the beginning of time, but it has now been revealed through the appearing of our Savior, Christ Jesus, who has destroyed death and has brought life and immortality to light through the gospel. And of this gospel I was appointed a herald and an apostle and a teacher. That is why I am suffering as I am. Yet this is no cause for shame, because I know whom I have believed, and am convinced that he is able to guard what I have entrusted to him until that day.</span> </p>
+<body>
+    <p> <span id="passageone">  this reason I remind you to fan into flame the gift of God, which is in you through the laying on of my hands. For the Spirit God gave us does not make us timid, but gives us power, love and self-discipline. So do not be ashamed of the testimony about our Lord or of me his prisoner. Rather, join with me in suffering for the gospel, by the power of God. He has saved us and called us to a holy life—not because of anything we have done but because of his own purpose and grace. This grace was given us in Christ Jesus before the beginning of time, but it has now been revealed through the appearing of our Savior, Christ Jesus, who has destroyed death and has brought life and immortality to light through the gospel. And of this gospel I was appointed a herald and an apostle and a teacher. That is why I am suffering as I am. Yet this is no cause for shame, because I know whom I have believed, and am convinced that he is able to guard what I have entrusted to him until that day.</span>
+<br>
+<span id="refrenceone">2 Timothy 1:6-12</span></p>
+
+    <p> <span id="passagetwo">  this reason I remind you to fan into flame the gift of God, which is in you through the laying on of my hands. For the Spirit God gave us does not make us timid, but gives us power, love and self-discipline. So do not be ashamed of the testimony about our Lord or of me his prisoner. Rather, join with me in suffering for the gospel, by the power of God. He has saved us and called us to a holy life—not because of anything we have done but because of his own purpose and grace. This grace was given us in Christ Jesus before the beginning of time, but it has now been revealed through the appearing of our Savior, Christ Jesus, who has destroyed death and has brought life and immortality to light through the gospel. And of this gospel I was appointed a herald and an apostle and a teacher. That is why I am suffering as I am. Yet this is no cause for shame, because I know whom I have believed, and am convinced that he is able to guard what I have entrusted to him until that day.</span>
+<br>
+<span id="refrencetwo">2 Timothy 1:6-12</span></p>
+
+
+
+
 </body>
 </html>
