--- a/css-links/css-links.html
+++ b/css-links/css-links.html
@@ -4,70 +4,175 @@
 <title> CSS Links</title>
 <style>
 
-#first {
-  background-color: rgb(255, 0, 0);
+#first:link {
+  color: red;
+ background-color: rgb(255, 0, 0);
   color: black;
-  border: 50px solid green;
+  
+}
+/* visited link */
+#first:visited {
+  color: green;
+  border: 50px solid rgb(115, 115, 138);
   padding: 10px 20px;
   text-align: center;
-  text-decoration: none;
+}
+
+/* mouse over link */
+#first:hover {
+  color: hotpink;
+font-size:x-large
+    
+}
+
+/* selected link */
+#first:active {
+  color: rgb(255, 255, 255); 
   display: inline-block;
 }
-#second {
+
+
+
+
+
+
+
+
+
+
+
+
+
+#second:link {
   background-color: #f742e8;
   color: rgb(115, 35, 243);
   padding: 14px 25px;
-  text-align: center;
+  
+}
+/* visited link */
+#second:visited {
+  color: green;
+  border: 50px solid rgb(115, 115, 138);
+ 
+}
+
+/* mouse over link */
+#second:hover {
+  color: hotpink;
+font-size:x-large
+    text-align: center;
   text-decoration: none;
   display: inline-block;
 }
-#third {
+
+
+/* selected link */
+#second:active {
+  color: rgb(255, 255, 255); 
+  display: inline-block;
+  font-weight: bolder;
+}
+
+#third:link {
   background-color: purple;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  
+}
+#third:visited{
   color: rgb(420, 69, 69);
   border: 30px solid orange;
-  text-align: left;
+}
+#third:hover{
+font-size: xx-large;
+text-align: left;
   display: inline-block;
+}
+  #third:active{
+color: brown
 }
 #fourth {
   background-color: rgb(32, 10, 32);
   color: rgb(42, 69, 420);
   border: 69px solid yellow;
-  text-align: right;
-  display: inline-block;
 
 }
-#Fifth {
-  background-color: rgb(125, 214, 255);
-  color: rgb(10, 4, 45);
-  border: 30px solid rgb(231, 30, 30);
-  text-align: left;
-  display: inline-block;
+
+#fourth:link {
+  background-color: purple;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  
 }
+
+#fourth:visited{
+  color: rgb(420, 69, 69);
+  border: 30px solid orange;
+}
+
+#fourth:hover{
+font-size: xx-small;
+text-align: right;
+}
+
+#fourth:active{
+color: rgb(255, 230, 0);
+ text-align: right;
+
+}
+
+#Fifth {
+ background-color: purple;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ display: inline-block;
+}
+
+#Fifth:link {
+  
+   background-color: rgb(125, 214, 255);
+  color: rgb(10, 4, 45);
+}
+#Fifth:visited{
+  color: rgb(420, 69, 69);
+  border: 30px solid orange;
+}
+
+#Fifth:hover{
+font-size: xx-large;
+text-align: center;
+   border: 30px solid rgb(231, 30, 30);
+  text-align: left;
+}
+
+#Fifth:active{
+color: rgb(0, 255, 136);
+background-color: blanchedalmond;
+}
+
 #sixth:link, a:visited {
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bolder;
   font-size: larger;
 }
+
 </style>
 </head>
 <body>
   <!--Fist Paragraph-->
-<p> <a id="first"; href="https://www.lamborghini.com/en-en"; target="_blank"> The consumption and emissions values in the website refer to your geographical IP. This value might be unrealistic if you navigate using VPN or if the position of your Internet provider is imprecise. If you believe you are incorrectly geolocalized, contact your dealer to get valid consumption and emissions information in your area.</a></p>
+<p> <a id="first" href="https://www.lamborghini.com/en-en" target="_blank"> The consumption and emissions values in the website refer to your geographical IP. This value might be unrealistic if you navigate using VPN or if the position of your Internet provider is imprecise. If you believe you are incorrectly geolocalized, contact your dealer to get valid consumption and emissions information in your area.</a></p>
 
 <!--Second Paragraph-->
-<p> <a id="second"; href="https://www.apple.com/"; target="_blank">iPhone 14 can detect a severe car crash, then
+<p> <a id="second" href="https://www.apple.com/" target="_blank"> iPhone 14 can detect a severe car crash, then
   call 911 and notify your emergency contacts. Hardware sensors and advanced motion algorithms identify signs of a crash — including sudden changes
   in speed, direction, and cabin pressure.</a></p>
 
 <!--Third Paragraph-->
-<p> <a id="third"; href="http://slither.io/"; target="_blank">Slither.io is a multiplayer online video game available for iOS, Android, and web browsers, developed by Steve Howse. Players control an avatar resembling a snake, which consumes multi-colored pellets, both from other players and ones that naturally spawn on the map in the game, to grow in size</a> </p>
+<p> <a id="third" href="http://slither.io/" target="_blank">Slither.io is a multiplayer online video game available for iOS, Android, and web browsers, developed by Steve Howse. Players control an avatar resembling a snake, which consumes multi-colored pellets, both from other players and ones that naturally spawn on the map in the game, to grow in size</a> </p>
 
 <!--Fourth Paragraph-->
-<p> <a id="fourth"; href="https://menus.preoday.com/Time-Out-Market-Chicago#/main/choose-branch"; target="_blank">You’ll never be bored at Big Kids, a ‘90s-inspired shop with sandwiches that incorporate everything from a secret spice mix and potato chips to fried Spam—basically, the stuff of any stoner’s munchies-fueled dreams. The signature Original Shiddy Burger began as a weekly special before the demand couldn't be ignored. It stars a smash patty, which has been mixed with shredded cheese so the edges caramelize when cooked, shredded lettuce, American cheese and a Big Mac-esque secret sauce. And you can now get it every day at Time Out Market Chicago.</a></p>
+<p> <a id="fourth" href="https://menus.preoday.com/Time-Out-Market-Chicago#/main/choose-branch" target="_blank">You’ll never be bored at Big Kids, a ‘90s-inspired shop with sandwiches that incorporate everything from a secret spice mix and potato chips to fried Spam—basically, the stuff of any stoner’s munchies-fueled dreams. The signature Original Shiddy Burger began as a weekly special before the demand couldn't be ignored. It stars a smash patty, which has been mixed with shredded cheese so the edges caramelize when cooked, shredded lettuce, American cheese and a Big Mac-esque secret sauce. And you can now get it every day at Time Out Market Chicago.</a></p>
 
 <!--Fifth Paragraph-->
-<p> <a id="Fifth"; href="https://www.kmlhs.org/"; target="_blank">KML is governed and operated by the Kettle Moraine Lutheran High School Federation, Inc., a federation of congregations which are affiliated with either the Wisconsin Evangelical Lutheran Synod or the Evangelical Lutheran Synod. The primary concern of the KML Federation is to provide a Christ-centered secondary education which prepares young adults for service to their Savior. God’s Word clearly states that parent(s) are to “train a child in the way he should go, and when he is old he will not turn from it.” (Proverbs 22:6 NIV)</a></p>
+<p> <a id="Fifth" href="https://www.kmlhs.org/" target="_blank"> KML is governed and operated by the Kettle Moraine Lutheran High School Federation, Inc., a federation of congregations which are affiliated with either the Wisconsin Evangelical Lutheran Synod or the Evangelical Lutheran Synod. The primary concern of the KML Federation is to provide a Christ-centered secondary education which prepares young adults for service to their Savior. God’s Word clearly states that parent(s) are to “train a child in the way he should go, and when he is old he will not turn from it.” (Proverbs 22:6 NIV)</a></p>
 
-<p> <a id="last": href="http://www.worldslongestwebsite.com/"> Longest website</a></p>
+<p> <a id="last" href="http://www.worldslongestwebsite.com/"> Longest website</a></p>
 </body>
 </html>
