--- a/css-font/css-list/css-list.html
+++ b/css-font/css-list/css-list.html
@@ -22,7 +22,8 @@ ul.secondUL {
 ul.thirdUL {
     list-style-position: inside;
 }
-#forthUL {
+ul.forthUL {
+    list-style-image: url('bulletpoint.gif')
    
 }
 </style>
