--- a/css-links/css-links.html
+++ b/css-links/css-links.html
@@ -59,8 +59,8 @@ font-size:x-large
 /* mouse over link */
 #second:hover {
   color: hotpink;
-font-size:x-large
-    text-align: center;
+  font-size:x-large;
+  text-align: center;
   text-decoration: none;
   display: inline-block;
 }
