--- a/css-table/css-table.html
+++ b/css-table/css-table.html
@@ -4,7 +4,10 @@
 <title> CSS Table </title>
 <style>
 table,tr,th,td {
-  border: 3px paleturquoise; 
+  
+  width: 100%;
+  border: 3px solid; 
+  border-color: blue;
   border-collapse: collapse;
   text-align: center;
 }
