--- a/css-table/css-table.html
+++ b/css-table/css-table.html
@@ -11,6 +11,23 @@ table,tr,th,td {
   border-collapse: collapse;
   text-align: center;
 }
+th {
+    width: 200px;
+    background-color: antiquewhite;
+}
+tbody {
+    background-color: greenyellow;
+}
+    td {
+        height: 20px;
+        text-align: right;
+        padding: 50px;
+        
+}
+tfoot {
+    background-color: rgb(96, 184, 235);
+}
+
 </style>
 </head>
 
@@ -19,7 +36,7 @@ table,tr,th,td {
     and a footer row.  Use three columns.-->
 <body>
 <table style="width:100%">
-    <caption> CSS Table caption</caption>
+    <caption style="background-color:red"> CSS Table caption</caption>
 
 <thead>    
 <tr>
@@ -39,6 +56,7 @@ table,tr,th,td {
     <td>second body row</td>
 </tr>
 </tbody>
+
 <tfoot> 
 <tr>
     <td>first foot</td>
