--- a/css-box-model/css-box-model.html
+++ b/css-box-model/css-box-model.html
@@ -26,6 +26,22 @@
    margin-right: 30px;
 outline: 20px;
 }
+#three {
+width:300px;
+border-left: 100;
+border-top: 90;
+border-bottom: 80;
+border-right: 70;
+padding-left: 60;
+padding-top: 50;
+padding-right: 40;
+padding-bottom: 30;
+margin-left: 25;
+margin-top: 20;
+margin-right: 15;
+margin-bottom: 10;
+outline: 5;
+}
 </style>
 </head>
 <body>
@@ -87,38 +103,48 @@ outline: 20px;
         right margin: 30<br>
         bottom margin: 40<br>
         left margin: 30<br>
-        top border: <br>
-        right border: <br>
-        bottom border: <br>
-        left border: <br>
-        top padding: <br>
-        right padding: <br>
-        bottom padding: <br>
-        left padding: <br>
-        outline thickness: <br>
-        TOTAL BOX WIDTH: 
+        top border: 60<br>
+        right border: 40<br>
+        bottom border: 60<br>
+        left border: 40<br>
+        top padding: 50<br>
+        right padding: 30<br>
+        bottom padding: 50<br>
+        left padding: 30<br>
+        outline thickness: 20<br>
+        TOTAL BOX WIDTH: 1,330
         </p>
         
 </div>
 
+<!--INSTRUCTIONS-->
+    <!--For the third div, create CSS rules in the <style> 
+        section to set the width to some number between 100-600. 
+        Set a different border on each of the four sides. 
+        Set a different padding on each of the four sides. 
+        Set a different margin on each of the four sides.
+        Set an outline.  Now go back and edit the text of that paragraph. 
+        Enter all the specified values, then calculate what the full width 
+        (content + margin + border + padding) of the box is and enter it as the TOTAL BOX WIDTH. -->
+
 <!--Third Div-->
 <div id="three">
     <p>
-        content width: <br>
-        top margin: <br>
-        right margin: <br>
-        bottom margin: <br>
-        left margin: <br>
-        top border: <br>
-        right border: <br>
-        bottom border: <br>
-        left border: <br>
-        top padding: <br>
-        right padding: <br>
-        bottom padding: <br>
-        left padding: <br>
-        outline thickness: <br>
-        TOTAL BOX WIDTH: 
+        content width: 300<br>
+        top margin: 20<br>
+        right margin: 15<br>
+        bottom margin: 10<br>
+        left margin: 25<br>
+        top border: 90<br>
+        right border: 70<br>
+        bottom border: 80<br>
+        left border: 100<br>
+        top padding: 50<br>
+        right padding: 40<br>
+        bottom padding: 30<br>
+        left padding: 60<br>
+        outline thickness: 5<br>
+        TOTAL BOX WIDTH: 895
         </p>
 </div>
 
