--- a/css-positioning/css-positioning.html
+++ b/css-positioning/css-positioning.html
@@ -13,20 +13,32 @@
     position: absolute;
 }
 #cat {
-position:relative;
+position:absolute;
+left: 5px;
+top: 5px;
 margin: 50px;
 height: 100px;
 width:100px;
+z-index: 1;
 }
 #dog {
 position: absolute;
+left: 50px;
+top: 50px;
+margin: 50px;
 height: 100px;
 width:100px;
-right: 20px;
+z-index: 2;
 
 }
 #cow {
-
+    position: absolute;
+left: 75px;
+top: 75px;
+margin: 75px;
+height: 100px;
+width:100px;
+z-index: 3;
 }
 </style>
 </head>
@@ -34,9 +46,8 @@ right: 20px;
     <!--INSTRUCTIONS-->
     <!-- Add an image to the <body> section of the page.  Use an id and a style in the <style> section to give it a fixed position.
     Add an image to the <body> section of the page.  Use an id and a style in the <style> section to give it a relative position.
-    Add an image to the <body> section of the page.  Use an id and a style in the <style> section to give it a absolute position.
--->
-<p>
+    Add an image to the <body> section of the page.  Use an id and a style in the <style> section to give it a absolute position.-->
+
     <img id="firstimage" src="img_5terre.jpg" alt="first image">
     <img id="secondimage" src="css_image_sample.jpg" alt="jail cell">
     <img id="thirdimage" src="gnome_image.jpg" alt="real gnome">
@@ -45,7 +56,7 @@ right: 20px;
     <!-- Add another three images to your page.  Use ids along with positioning and z-index rules in the <style> section to make the 
         three images overlap like this (they are offset, so you can see portions of all three and they are -->
     <img id="cat" src="cat_image.avif" alt="cat">
-    <img id="dog" src="dog" alt="dog">
+    <img id="dog" src="Dog_image.jpg" alt="dog">
     <img id="cow" src="cow_image.jpeg" alt="cow">
 </p>
 </body>
