--- a/css-positioning/css-positioning.html
+++ b/css-positioning/css-positioning.html
@@ -3,17 +3,23 @@
 <head>
 <title>CSS Positioning</title>
 <style>
+
 #firstimage {
     position: fixed;
+    cursor: crosshair;
+    
 }
 #secondimage {
     position: relative;
+    cursor: crosshair;
 }
 #thirdimage {
     position: absolute;
+    cursor: crosshair;
 }
 #cat {
 position:absolute;
+cursor: crosshair;
 left: 5px;
 top: 5px;
 margin: 50px;
@@ -23,6 +29,7 @@ z-index: 1;
 }
 #dog {
 position: absolute;
+cursor: crosshair;
 left: 50px;
 top: 50px;
 margin: 50px;
@@ -32,7 +39,7 @@ z-index: 2;
 
 }
 #cow {
-    position: absolute;
+position: absolute;
 left: 75px;
 top: 75px;
 margin: 75px;
@@ -40,6 +47,7 @@ height: 100px;
 width:100px;
 z-index: 3;
 }
+
 </style>
 </head>
 <body>
