--- a/css-positioning/css-positioning.html
+++ b/css-positioning/css-positioning.html
@@ -4,6 +4,9 @@
 <title>CSS Positioning</title>
 <style>
 
+#bodystyle {
+    cursor:grab
+}
 #firstimage {
     position: fixed;
     cursor: crosshair;
@@ -50,7 +53,7 @@ z-index: 3;
 
 </style>
 </head>
-<body>
+<body id="bodystyle">
     <!--INSTRUCTIONS-->
     <!-- Add an image to the <body> section of the page.  Use an id and a style in the <style> section to give it a fixed position.
     Add an image to the <body> section of the page.  Use an id and a style in the <style> section to give it a relative position.
