--- a/css-positioning/css-positioning.html
+++ b/css-positioning/css-positioning.html
@@ -4,8 +4,8 @@
 <title>CSS Positioning</title>
 <style>
 
-#bodystyle {
-    cursor:grab
+body{ 
+    cursor: url(https://o.remove.bg/downloads/a8077a95-19d5-4635-aef3-768076b3fc32/6345cde8080a6ed4cd989df8a5ee546b--vector-free-free-vectors-removebg-preview.png);
 }
 #firstimage {
     position: fixed;
@@ -53,7 +53,7 @@ z-index: 3;
 
 </style>
 </head>
-<body id="bodystyle">
+<body>
     <!--INSTRUCTIONS-->
     <!-- Add an image to the <body> section of the page.  Use an id and a style in the <style> section to give it a fixed position.
     Add an image to the <body> section of the page.  Use an id and a style in the <style> section to give it a relative position.
