--- a/css-horizontal/css-horizontal.html
+++ b/css-horizontal/css-horizontal.html
@@ -20,9 +20,32 @@ margin:auto;
 
 #div2 {
     position: absolute;
-  right: 0px;
+  right: 10px;
   width: 300px;
-  border: 3px solid #73AD21;
+  border: 3px solid #f1c943;
+  background-color: rgb(37, 216, 216);
+  padding: 10px;
+}
+#div3 {
+    position: absolute;
+  left: 10px;
+  width: 300px;
+  border: 3px solid #20d619;
+  background-color: red;
+  padding: 10px;
+}
+#div4 {
+    float: left;
+  width: 300px;
+  border: 3px solid #2b6e2993;
+  background-color: rgb(29, 56, 143);
+  padding: 10px;
+}
+#div5 {
+    float: right;
+    width: 300px;
+  border: 3px solid #bcfab9;
+  background-color: rgba(185, 3, 3, 0.664);
   padding: 10px;
 }
     </style>
@@ -53,11 +76,10 @@ Use CSS to give the div a width, background color, and border.  Use float to mov
         </p>
     </div>
     <div id="div2">
+        
         <!--INSTRUCTIONS
 Add a div section to the body and give it an ID.  Put several paragraphs of text into the div.  
-Use CSS to give the div a width, background color, and border.  Use absolute positioning properties to move the div section to the right side of the page.
-Add a div section to the body and give it an ID.  Put several paragraphs of text into the div.  
-Use CSS to give the div a width, background color, and border.  Use absolute positioning properties to move the div section to the left side of the page.-->
+Use CSS to give the div a width, background color, and border.  Use absolute positioning properties to move the div section to the right side of the page.-->
 
     <!--SECOND DIV-->
            <!--First paragraph-->
@@ -73,6 +95,70 @@ Use CSS to give the div a width, background color, and border.  Use absolute pos
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nam voluptatem ipsa illo quia vero.
         </p>
     </div>
+
+
+    <div id="div3">
+        <!--INSTRUCTIONS
+Add a div section to the body and give it an ID.  Put several paragraphs of text into the div.  
+Use CSS to give the div a width, background color, and border.  Use absolute positioning properties to move the div section to the left side of the page.-->
+
+
+    <!--THIRD DIV-->
+    <!--First paragraph-->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque id ipsum assumenda voluptate labore corporis minus ipsa it rem unde nulla voluptas fugiat? Saepe minus blanditiis aliquam at, iusto doloribus pariatur! Optio ea harum, fugit officiis corporis quia. Temporibus quas hic debitis magni perferendis porro labore exercitationem quibusdam dignissimos culpa saepe, neque placeat doloribus, nam delectus enim ratione, facere odio! Incidunt.
+ </p>
+ <!--Second paragraph-->
+ <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fugit qui eum impedit? Sit, dolores unde necessitatibus magnam hic fuga aliquid odit reprehenderit officiis dolore! Neque quos placeat, facere quo, dolorum illum dolor commodi tempora cupiditate reprehenderit, dolorem ad!
+ </p>
+ <!--Third paragraph-->
+ <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde animi est architecto. Consectetur beatae similique culpa voluptatibus ullam, explicabo veritatis.
+ </p>
+ <!--Fourth paragraph-->
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nam voluptatem ipsa illo quia vero.
+ </p>
+
+<div id="div4">
+    <!--INSTRUCTIONS
+Add a div section to the body and give it an ID.  Put several paragraphs of text into the div.  
+Use CSS to give the div a width, background color, and border.  Use absolute positioning properties to move the div section to the left side of the page.-->
+
+
+<!--THIRD DIV-->
+<!--First paragraph-->
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque id ipsum assumenda voluptate labore corporis minus ipsa it rem unde nulla voluptas fugiat? Saepe minus blanditiis aliquam at, iusto doloribus pariatur! Optio ea harum, fugit officiis corporis quia. Temporibus quas hic debitis magni perferendis porro labore exercitationem quibusdam dignissimos culpa saepe, neque placeat doloribus, nam delectus enim ratione, facere odio! Incidunt.
+</p>
+<!--Second paragraph-->
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fugit qui eum impedit? Sit, dolores unde necessitatibus magnam hic fuga aliquid odit reprehenderit officiis dolore! Neque quos placeat, facere quo, dolorum illum dolor commodi tempora cupiditate reprehenderit, dolorem ad!
+</p>
+<!--Third paragraph-->
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde animi est architecto. Consectetur beatae similique culpa voluptatibus ullam, explicabo veritatis.
+</p>
+<!--Fourth paragraph-->
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nam voluptatem ipsa illo quia vero.
+</p>
+</div>
+
+<div id="div5">
+    <!--INSTRUCTIONS
+Add a div section to the body and give it an ID.  Put several paragraphs of text into the div.  
+Use CSS to give the div a width, background color, and border.  Use absolute positioning properties to move the div section to the left side of the page.-->
+
+
+<!--THIRD DIV-->
+<!--First paragraph-->
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque id ipsum assumenda voluptate labore corporis minus ipsa it rem unde nulla voluptas fugiat? Saepe minus blanditiis aliquam at, iusto doloribus pariatur! Optio ea harum, fugit officiis corporis quia. Temporibus quas hic debitis magni perferendis porro labore exercitationem quibusdam dignissimos culpa saepe, neque placeat doloribus, nam delectus enim ratione, facere odio! Incidunt.
+</p>
+<!--Second paragraph-->
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fugit qui eum impedit? Sit, dolores unde necessitatibus magnam hic fuga aliquid odit reprehenderit officiis dolore! Neque quos placeat, facere quo, dolorum illum dolor commodi tempora cupiditate reprehenderit, dolorem ad!
+</p>
+<!--Third paragraph-->
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde animi est architecto. Consectetur beatae similique culpa voluptatibus ullam, explicabo veritatis.
+</p>
+<!--Fourth paragraph-->
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nam voluptatem ipsa illo quia vero.
+</p>
+</div>
+
 </body>
 </html>
 
