--- a/css-rounded/css-rounded.html
+++ b/css-rounded/css-rounded.html
@@ -4,9 +4,47 @@
 <title>CSS Rounded Corners</title>
 <style>
 
+#p1 {
+border-radius: 25px;
+  background: #aaf82c;
+  padding: 20px;
+  width: fit-content;
+}
+#p2 {
+border-radius: 10px 30px 25px 5px;
+}
+#p3 {
+    background-image: url();
+}
+
 </style>
 </head>
+<!--  P1 = Add a paragraph section to the body and give it an ID.  Put several lines of text into the paragraph.  Use CSS to give the paragraph a width and a background color.  Use the border-radius property to round all four corners of the paragraph with the same radius.
+P2 = Add a paragraph section to the body and give it an ID.  Put several lines of text into the paragraph.  Use CSS to give the paragraph a width and a background color.  Use the border-radius property to round all four corners of the paragraph with different radii.
+P3 = Add a paragraph section to the body and give it an ID.  Put several lines of text into the paragraph.  Use CSS to give the paragraph a width and a background image.  Use the border-radius property to round the two corners on the left side with one radius and the two corners on the right side with a noticeably different radius.
+P4 = a paragraph section to the body and give it an ID.  Put several lines of text into the paragraph.  Use CSS to give the paragraph a width and a background image.  Use the border-radius property to round two corners of your choice with one radius, but do not round the other two corners.
+P5 = a paragraph section to the body and give it an ID.  Put several lines of text into the paragraph.  Use CSS to give the paragraph a width and a background color.  Use the border-radius property to round all four corners with the same elliptical radius.
+P6 = Add a paragraph section to the body and give it an ID.  Put several lines of text into the paragraph.  Use CSS to give the paragraph a width and a background color.  Use the border-radius property to round all four corners with obviously different elliptical radii.
+-->
 <body>
+<p id="p1">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit tempora itaque ad nobis facere possimus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error autem eveniet nulla tempora, aut a iusto aliquam. Dolorem est, officiis ipsam accusamus, pariatur voluptatibus eos quas dignissimos illum saepe, dolor nulla repellat error quia? Cum.
+</p>
+<p id="p2">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit tempora itaque ad nobis facere possimus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error autem eveniet nulla tempora, aut a iusto aliquam. Dolorem est, officiis ipsam accusamus, pariatur voluptatibus eos quas dignissimos illum saepe, dolor nulla repellat error quia? Cum.
+</p>
+<p id="p3">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit tempora itaque ad nobis facere possimus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error autem eveniet nulla tempora, aut a iusto aliquam. Dolorem est, officiis ipsam accusamus, pariatur voluptatibus eos quas dignissimos illum saepe, dolor nulla repellat error quia? Cum.
+</p>
+<p id="p4">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit tempora itaque ad nobis facere possimus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error autem eveniet nulla tempora, aut a iusto aliquam. Dolorem est, officiis ipsam accusamus, pariatur voluptatibus eos quas dignissimos illum saepe, dolor nulla repellat error quia? Cum.
+</p>
+<p id="p5">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit tempora itaque ad nobis facere possimus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error autem eveniet nulla tempora, aut a iusto aliquam. Dolorem est, officiis ipsam accusamus, pariatur voluptatibus eos quas dignissimos illum saepe, dolor nulla repellat error quia? Cum.
+</p>
+<p id="p6">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit tempora itaque ad nobis facere possimus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error autem eveniet nulla tempora, aut a iusto aliquam. Dolorem est, officiis ipsam accusamus, pariatur voluptatibus eos quas dignissimos illum saepe, dolor nulla repellat error quia? Cum.
+</p>
 
 </body>
 </html>
