--- a/css-opacity/css-opacity.html
+++ b/css-opacity/css-opacity.html
@@ -41,10 +41,44 @@ background-color: deeppink;
     opacity: 0.1;
 }
 
+table2
+{
+height: 100px;
+width: 100px;
+background-color: deeppink;
+}
+#cell1 {
+   background-color: rgba(red, 0,0, 0.9); 
+}
+#cell2 {
+    opacity: 0.8;
+}
+#cell3 {
+    opacity: 0.7;
+}
+#cell4 {
+    opacity: 0.6;
+}
+#cell5 {
+    opacity: 0.5;
+}
+#cell6 {
+    opacity: 0.4;
+}
+#cell7 {
+    opacity: 0.3;
+}
+#cell8 {
+    opacity: 0.2;
+}
+#cell9 {
+    opacity: 0.1;
+}
 </style>
 </head>
 <body>
 <img id="img1""1img" src="Pineapple.jpg" alt="Pinapple">
+
 <table id="table1">
     <tr>
         <td id="cell1">90%</td>
@@ -61,6 +95,23 @@ background-color: deeppink;
         <td id="cell8">20%</td>
         <td id="cell9">10%</td>
     </tr>
+
+    <table class="table2">
+        <tr>
+            <td id="cell1">90%</td>
+            <td id="cell2">80%</td>
+            <td id="cell3">70%</td>
+        </tr>
+        <tr>
+            <td id="cell4">60%</td>
+            <td id="cell5">50%</td>
+            <td id="cell6">40%</td>
+        </tr>
+        <tr>
+            <td id="cell7">30%</td>
+            <td id="cell8">20%</td>
+            <td id="cell9">10%</td>
+        </tr>
 
 
 
