--- a/css-opacity/css-opacity.html
+++ b/css-opacity/css-opacity.html
@@ -40,7 +40,7 @@ background-color: deeppink;
 #cell9 {
     opacity: 0.1;
 }
-
+WHAT IS THE DIFFERENE BETWEEN A CLASS AND ID
 table2
 {
 height: 100px;
@@ -48,7 +48,7 @@ width: 100px;
 background-color: deeppink;
 }
 #cell1 {
-   background-color: rgba(red, 0,0, 0.9); 
+   background-color: rgba(red, 0, 0, 0.9); 
 }
 #cell2 {
     opacity: 0.8;
